# oac

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  index.html  pyproject.toml
open-agent-capsule-starter-complete/: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  VISION.md  pyproject.toml
open-agent-capsule-starter-complete/.agents/skills/adapter-profile-author/: SKILL.md
open-agent-capsule-starter-complete/.agents/skills/gate-checker/: SKILL.md
open-agent-capsule-starter-complete/.agents/skills/harness-adapter-author/: SKILL.md
open-agent-capsule-starter-complete/.agents/skills/linear-seed-writer/: SKILL.md
open-agent-capsule-starter-complete/.agents/skills/spec-author/: SKILL.md
open-agent-capsule-starter-complete/docs/spec/: 000-principles.md  001-canonical-format.md  002-adapter-model.md  003-target-mappings.md  005-security-and-distribution.md  007-ingest-architecture.md  008-ingest-support-matrix.md  009-proposal-and-promotion.md  010-eval-and-conformance.md  011-snapshots-and-release.md  README.md
open-agent-capsule-starter-complete/examples/adapter-profiles/: claude-code.default.yaml  codex.default.yaml  mcp.default.yaml  openclaw.default.yaml  opencode.default.yaml  webmcp.default.yaml
open-agent-capsule-starter-complete/examples/bridges/: README.md
open-agent-capsule-starter-complete/examples/bridges/mcp/: README.md
open-agent-capsule-starter-complete/examples/bridges/webmcp/: README.md  browser_hook_bridge.ts
open-agent-capsule-starter-complete/examples/hello-capsule/: manifest.yaml
open-agent-capsule-starter-complete/examples/hello-capsule/identity/: persona.md
open-agent-capsule-starter-complete/examples/hello-capsule/procedures/: onboarding.memory.md
open-agent-capsule-starter-complete/examples/hooks/: README.md  hook-payload.example.json
open-agent-capsule-starter-complete/examples/hooks/go/: post_hydrate_notice.go
open-agent-capsule-starter-complete/examples/hooks/rust/: post_hydrate_notice.rs
open-agent-capsule-starter-complete/examples/hooks/wasm/: README.md  guest.rs  host.ts
open-agent-capsule-starter-complete/linear/: seed_issues.csv  seed_projects.md
open-agent-capsule-starter-complete/prompts/: codex-bootstrap.md
open-agent-capsule-starter-complete/schemas/: adapter-profile.schema.json  capsule-manifest.schema.json
open-agent-capsule-starter-complete/scripts/: check_all.py  update_schema.py
open-agent-capsule-starter-complete/src/oac/: __main__.py  adapter_utils.py  capsule.py  catalog.py  cli.py  evals.py  ingest.py  io.py  models.py  profile_io.py  proposals.py  snapshot.py
open-agent-capsule-starter-complete/src/oac/adapters/: base.py  claude_code.py  codex.py  gemini.py  mcp.py  openclaw.py  opencode.py  webmcp.py
open-agent-capsule-starter-complete/tests/: test_cli.py  test_eval_and_promotion.py  test_hook_examples.py  test_ingest_fixtures.py  test_profiles.py  test_projection_fixtures.py
open-agent-capsule-starter-complete/tests/fixtures/ingest/: claude-code.json  codex.json  gemini.json  mcp.json  (+3 more)
(+164 files in other folders)
