[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "oac"
version = "0.3.0"
description = "File-first specification and toolkit for portable, versioned agent state"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["agents", "ai", "state-management", "portable", "mcp", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.12,<3",
  "PyYAML>=6.0.3,<7",
]

[project.urls]
Homepage = "https://github.com/adpena/oac"
Repository = "https://github.com/adpena/oac"
Documentation = "https://github.com/adpena/oac/tree/main/docs"
Issues = "https://github.com/adpena/oac/issues"
Changelog = "https://github.com/adpena/oac/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.15,<1",
  "maturin>=1.12,<2.0",
]

[project.scripts]
oac = "oac.cli:main"

[tool.maturin]
module-name = "oac_core"
python-source = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
